--- a/style.css
+++ b/style.css
@@ -214,3 +214,8 @@ pre{
     padding-left: 80px;
     margin-top: 10px;
   }
+
+  .Testimonialsbox:hover{
+    background-color: lightblue;
+    box-shadow: 10px 10px 20px 1px #96bb7c;
+}
